# triage-warden

./: .gitignore  Cargo.toml  README.md
crates/tw-actions/: Cargo.toml
crates/tw-actions/src/: block_sender.rs  check_email_authentication.rs  create_ticket.rs  disable_user.rs  email_sanitizer.rs  escalate.rs  isolate_host.rs  lib.rs  log_false_positive.rs  lookup_attachments.rs  lookup_sender_reputation.rs  lookup_urls.rs  notify_reporter.rs  notify_user.rs  parse_email.rs  quarantine_email.rs  registry.rs  run_triage_agent.rs
crates/tw-actions/tests/: api_key_scope_integration_tests.rs  auth_integration_tests.rs  escalation_privilege_integration_tests.rs
crates/tw-api/: Cargo.toml
crates/tw-api/src/: dto.rs  error.rs  lib.rs  middleware.rs  rate_limit.rs  server.rs  state.rs  test_helpers.rs
crates/tw-api/src/auth/: csrf.rs  extractors.rs  mod.rs  test_helpers.rs
crates/tw-api/src/middleware/: mod.rs  tenant.rs
crates/tw-api/src/routes/: activity.rs  analytics.rs  api_keys.rs  assets.rs  auth.rs  autonomy.rs  comments.rs  connectors.rs  features.rs  feedback.rs  handoff.rs  health.rs  hunting.rs  identities.rs  incidents.rs  iocs.rs  kill_switch.rs  knowledge.rs  lessons.rs  metrics.rs  mod.rs  nl_query.rs  notifications.rs  packages.rs  playbooks.rs  policies.rs  (+6 more)
crates/tw-api/templates/: analytics.html  approvals.html  base.html  dashboard.html  hunting.html  login.html  playbooks.html  settings.html
crates/tw-api/tests/: credential_zeroization_tests.rs  integration_tests.rs  kill_switch_tests.rs  rate_limiting_tests.rs  rollback_integrity_tests.rs
crates/tw-cli/: Cargo.toml
crates/tw-cli/src/: api_client.rs  config.rs  main.rs  validator.rs
crates/tw-connectors/: Cargo.toml
crates/tw-connectors/src/: http.rs  lib.rs  secure_string.rs  testing.rs  traits.rs
crates/tw-core/: Cargo.toml
crates/tw-core/src/: analytics.rs  autonomy.rs  connector.rs  crypto.rs  custom_ioc.rs  events.rs  feedback.rs  guardrails.rs  incident.rs  lesson.rs  lib.rs  notification.rs  orchestrator.rs  playbook.rs  policy.rs  risk.rs  sandbox_pipeline.rs  workflow.rs
crates/tw-core/tests/: multi_instance_integration_tests.rs  pagination_integration_tests.rs  rls_integration_tests.rs
crates/tw-observability/: Cargo.toml
crates/tw-observability/src/: audit.rs  lib.rs  logging.rs  metrics.rs
crates/tw-policy/: Cargo.toml
crates/tw-policy/src/: approval.rs  approval_manager.rs  config.rs  engine.rs  escalation.rs  kill_switch.rs  lib.rs  mode.rs  rules.rs  sanitization.rs
python/: README.md  pyproject.toml
python/scripts/: run_tests.sh
python/tests/: __init__.py  conftest.py  test_action_validation.py  test_email_analysis.py  test_error_sanitization.py  test_evaluation.py  test_evidence_parsing.py  test_hallucination.py  test_llm_provider_validation.py  test_metrics.py  test_mitre_tool.py  test_output_parser.py  test_phishing_analysis.py  test_phishing_workflow.py  test_phishing_workflow_bridge.py  test_playbook.py  test_policy_bridge.py  test_policy_bridge_standalone.py  test_prompt_injection.py  test_react.py  test_reports.py  test_sanitization.py  test_security.py  test_sender_reputation_tool.py  test_tool_argument_validation.py  test_tools.py  test_tools_bridge_modes.py  test_tools_mock_fallback_guard.py  test_validation_integration.py
python/tests/benchmarks/: __init__.py  test_datasets.py  test_metrics.py  test_tasks.py
python/tests/e2e/: __init__.py  _e2e_fixtures.py  conftest.py  test_phishing_pipeline.py
python/tests/fixtures/: __init__.py  containers.py  sample_data.py
python/tests/integration/: __init__.py  conftest.py  test_database_integration.py  test_malware_triage.py  test_phishing_triage.py  test_suspicious_login.py
python/tests/test_copilot/: __init__.py  test_assistant.py
python/tests/test_few_shot/: __init__.py  test_ab_testing.py  test_ingestion.py  test_models.py  test_prompt_builder.py  test_selector.py
python/tests/test_hunting/: __init__.py  test_hypothesis.py
python/tests/test_nl_query/: __init__.py  test_audit.py  test_backends.py  test_context.py  test_entities.py  test_intent.py  test_translator.py
python/tests/test_playbook/: test_generator.py
python/tests/test_rag/: __init__.py  conftest.py  test_config.py  test_embeddings.py  test_ingestion.py  test_models.py  test_monitoring.py  test_rag_analyzer.py  test_retrieval.py  test_tools.py  test_validation.py  test_vector_store.py
python/tests/test_reports/: test_post_incident.py
python/tw_ai/: __init__.py  sanitization.py
python/tw_ai/agents/: __init__.py  action_tools.py  adaptive_executor.py  evidence_parser.py  models.py  output_parser.py  react.py  response_planner.py  tools.py
python/tw_ai/analysis/: __init__.py  email.py  mitre.py  phishing.py  rag_analyzer.py  security.py
python/tw_ai/benchmarks/: __init__.py  cli.py  datasets.py  metrics.py  runner.py  tasks.py
python/tw_ai/copilot/: __init__.py  assistant.py
python/tw_ai/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
python/tw_ai/few_shot/: __init__.py  ab_testing.py  config.py  ingestion.py  models.py  prompt_builder.py  selector.py
python/tw_ai/hunting/: __init__.py  hypothesis.py
python/tw_ai/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
python/tw_ai/metrics/: __init__.py  collector.py  reporter.py
python/tw_ai/nl_query/: __init__.py  api.py  audit.py  context.py  entities.py  intent.py  translator.py
python/tw_ai/playbook/: __init__.py  executor.py  generator.py  loader.py
python/tw_ai/rag/: __init__.py  config.py  embeddings.py  models.py  monitoring.py  retrieval.py  tools.py  validation.py  vector_store.py
python/tw_ai/reports/: __init__.py  formatters.py  generator.py  models.py  post_incident.py
python/tw_ai/validation/: __init__.py  action.py  hallucination.py
python/tw_ai/workflows/: __init__.py  phishing.py
tests/load/: Cargo.toml  README.md
tests/load/src/: main.rs
tw-bridge/: Cargo.toml  README.md  pyproject.toml
tw-bridge/python/tests/: test_bridge.py  test_integration.py
tw-bridge/src/: lib.rs
(+454 files in other folders)
