[workspace]
resolver = "2"
members = [
    "crates/tw-core",
    "crates/tw-policy",
    "crates/tw-connectors",
    "crates/tw-actions",
    "crates/tw-observability",
    "crates/tw-cli",
    "tw-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Triage Warden Team"]
license = "MIT"
repository = "https://github.com/triage-warden/triage-warden"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# PyO3 for Python interop
pyo3 = { version = "0.20", features = ["extension-module"] }

# Testing
mockall = "0.12"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
