[workspace]
resolver = "2"
members = [
    "crates/tw-core",
    "crates/tw-policy",
    "crates/tw-connectors",
    "crates/tw-actions",
    "crates/tw-observability",
    "crates/tw-api",
    "crates/tw-cli",
    "tw-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Triage Warden Team"]
license = "MIT"
repository = "https://github.com/triage-warden/triage-warden"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# PyO3 for Python interop
pyo3 = { version = "0.20", features = ["extension-module"] }

# Testing
mockall = "0.12"
wiremock = "0.6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "json"] }

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "catch-panic", "fs"] }
hyper = { version = "1.5", features = ["full"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Rate limiting
governor = "0.6"

# HMAC for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
