[package]
name = "tw-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust-Python bridge using PyO3 for Triage Warden"

[lib]
name = "tw_bridge"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable for integration testing with Python interpreter
python-tests = ["pyo3/auto-initialize"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# PyO3 serialization support
pythonize = "0.20"

# Sync for shared runtime
once_cell = "1.19"

tw-core = { path = "../crates/tw-core" }
tw-connectors = { path = "../crates/tw-connectors" }
tw-policy = { path = "../crates/tw-policy" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pyo3 = { workspace = true, features = ["auto-initialize"] }
