[package]
name = "tw-actions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Action plugins for Triage Warden"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"

tw-connectors = { path = "../tw-connectors" }
tw-core = { path = "../tw-core" }
tw-observability = { path = "../tw-observability" }

# HMAC for rollback data signing
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

# Key derivation
hkdf = "0.12"

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tw-policy = { path = "../tw-policy" }
