[package]
name = "tw-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for Triage Warden"

[[bin]]
name = "triage-warden"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true

tw-core = { path = "../tw-core", features = ["database"] }
tw-policy = { path = "../tw-policy" }
tw-connectors = { path = "../tw-connectors" }
tw-actions = { path = "../tw-actions" }
tw-observability = { path = "../tw-observability" }
tw-api = { path = "../tw-api" }

# HTTP client for API calls
reqwest.workspace = true

directories = "5.0"
colored = "2.1"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
