[package]
name = "tw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core orchestrator and data models for Triage Warden"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true

tw-policy = { path = "../tw-policy" }
tw-connectors = { path = "../tw-connectors" }
tw-actions = { path = "../tw-actions" }
tw-observability = { path = "../tw-observability" }

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
