[package]
name = "tw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core orchestrator and data models for Triage Warden"

[features]
default = []
database = ["sqlx"]
redis-cache = ["dep:redis", "dep:deadpool-redis"]  # Redis cache support
redis-streams = ["dep:redis", "dep:deadpool-redis"]  # Redis Streams message queue support
redis-full = ["redis-cache", "redis-streams"]  # Enable all Redis features
mx-validation = []  # Optional MX record validation for email addresses

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
metrics.workspace = true

tw-policy = { path = "../tw-policy" }
tw-connectors = { path = "../tw-connectors" }
tw-observability = { path = "../tw-observability" }

# Optional database support
sqlx = { workspace = true, optional = true }

# Password hashing and auth
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

# Credential encryption
aes-gcm = "0.10"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }

# Leader election
hostname = "0.4"
humantime-serde = "1.1"

# Redis (optional)
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
sqlx = { workspace = true }
