[package]
name = "tw-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Logging, metrics, and audit infrastructure for Triage Warden"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
