[package]
name = "tw-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Policy engine and guardrails for Triage Warden"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
regex = "1.10"

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
