[package]
name = "tw-load-test"
version = "0.1.0"
edition = "2021"
description = "Load testing tool for Triage Warden API"
authors = ["Triage Warden Team"]
license = "MIT"
publish = false

# Keep this as an independent crate, not part of the main workspace
[workspace]

[[bin]]
name = "tw-load-test"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full", "sync"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# HMAC for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Statistics
statrs = "0.17"

# Progress and output formatting
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random data generation
rand = "0.8"
